@@ -10,7 +10,7 @@ from datetime import date
 # version
 VERSION = "0.17"
 # secret key
-SECRET_KEY='4|546(5q4sd65)q4sd3/1a2zer:3456165476&'
+SECRET_KEY={{spi_rssfeeds_secretkey}}
 # debug is false by default
 DEBUG = True
 # testing is false by default
