@@ -36,7 +36,7 @@ SSO_PORT={{spi_sso_port}}
 SENTRY_DSN=''
 
 # SECRET KEY for debug and dev
-SECRET_KEY='4|546(5q4sd65)q4sd3/1a2zer:3456165476&'
+SECRET_KEY={{spi_sso_secretkey}}
 
 # admin user
 ADMIN_USERNAME='{{spi_sso_admin_username}}'
