@@ -19,10 +19,10 @@ server {
 
     # enable ocsp stapling (mechanism by which a site can convey certificate revocation information to visitors in a privacy-preserving, scalable manner)
     # http://blog.mozilla.org/security/2013/07/29/ocsp-stapling-in-firefox/
-    ssl_stapling on;
-    ssl_trusted_certificate /etc/pki/tls/certs/7pi.eu/cert-chain.pem;
+    # ssl_stapling on;
+    # ssl_trusted_certificate /etc/pki/tls/certs/7pi.eu/cert-chain.pem;
     # google resolver?
-    resolver 8.8.8.8;
+    # resolver 8.8.8.8;
 
     access_log /var/log/nginx/access-7pi.log;
     error_log /var/log/nginx/error-7pi.log;
@@ -35,7 +35,7 @@ server {
 
     # apis
     location /apis/sso {
-             proxy_pass http://127.0.0.1:9090/;
+             proxy_pass http://{{spi_sso_host}}:{{spi_sso_port}}/;
              proxy_redirect off;
 
              proxy_set_header Host            $host;
@@ -44,7 +44,7 @@ server {
     }
 
     location /apis/rssfeeds {
-             proxy_pass http://127.0.0.1:9091/;
+             proxy_pass http://{{spi_rssfeeds_host}}:{{spi_rssfeeds_port}}/;
              proxy_redirect off;
 
              proxy_set_header Host            $host;
@@ -53,7 +53,7 @@ server {
     }
 
     location /apis/userfeeds {
-             proxy_pass http://127.0.0.1:9092/;
+             proxy_pass http://{{spi_userfeeds_host}}:{{spi_userfeeds_port}}/;
              proxy_redirect off;
 
              proxy_set_header Host            $host;
