@@ -23,6 +23,7 @@ spi_sso_port: 9090
 spi_sso_admin_username: 'admin'
 spi_sso_admin_password: 'zebulon.admin2014'
 spi_sso_admin_email: 'sso-admin@7pi.eu'
+spi_sso_secretkey: '4|546(5q4sd65)q4sd3/1a2zer:3456165476&'
 # ----------------------------------------------------------------------
 # 7pi RssFeeds
 # ----------------------------------------------------------------------
@@ -32,6 +33,7 @@ spi_rssfeeds_pg_host: '127.0.0.1'
 spi_rssfeeds_pg_port: 5432
 spi_rssfeeds_host: '127.0.0.1'
 spi_rssfeeds_port: 9091
+spi_rssfeeds_secretkey: '4|546(5q4sd65)q4sd3/1a2zer:3456165476&'
 # ----------------------------------------------------------------------
 # 7pi Crawler
 # ----------------------------------------------------------------------
