@@ -1,0 +1,2 @@
+---
+synergy_server: 192.168.1.9
