@@ -50,23 +50,23 @@
     - restart collectd
 
 - name: Influxdb | Open admin port 8083 on local lan
-  ufw: rule=allow src=192.168.0.0/24 dest=any port=8083
+  ufw: rule=allow src={{fw_subnet}} dest=any port=8083
   tags: influxdb
 
 - name: Influxdb | Open api port 8086 on local lan
-  ufw: rule=allow src=192.168.0.0/24 dest=any port=8086
+  ufw: rule=allow src={{fw_subnet}} dest=any port=8086
   tags: influxdb
 
-- name: Influxdb | Open graphite compatible api on tcp port 2003 on local lan
-  ufw: rule=allow src=192.168.0.0/24 dest=any proto=tcp port=2003
+- name: Influxdb | Open graphite compatible api on tcp port {{carbon_port}} on local lan
+  ufw: rule=allow src={{fw_subnet}} dest=any proto=tcp port={{carbon_port}}
   tags: influxdb
 
-- name: Influxdb | Open graphite compatible api on udp port 2003 on local lan
-  ufw: rule=allow src=192.168.0.0/24 dest=any proto=udp port=2003
+- name: Influxdb | Open graphite compatible api on udp port {{carbon_port}} on local lan
+  ufw: rule=allow src={{fw_subnet}} dest=any proto=udp port={{carbon_port}}
   tags: influxdb
 
 - name: Influxdb | Close raft port 8090 outside of local lan
-  ufw: rule=allow src=192.168.0.0/24 dest=any proto=udp port=8090
+  ufw: rule=allow src={{fw_subnet}} dest=any proto=udp port=8090
   tags: influxdb
 
 #- name: Influxdb | Open replication port if needed with slaves
