@@ -66,6 +66,6 @@
   tags: kibana
 
 - name: Kibana | Open port 7080 on firewall for kibana
-  ufw: rule=allow src=192.168.0.0/24 dest=any port=7080
-  tags: logstash
+  ufw: rule=allow src={{fw_subnet}} dest=any port=7080
+  tags: kibana
 
