@@ -1,7 +1,7 @@
 <Plugin "write_graphite">
  <Carbon>
    Host "localhost"
-   Port "2003"
+   Port "{{carbon_port}}"
    #Prefix "collectd."
    #Postfix ""
    #Protocol "udp"
