@@ -42,7 +42,7 @@ read-timeout = "5s"
   # Configure the graphite api
   [input_plugins.graphite]
   enabled = true
-  port = 2003
+  port = {{carbon_port}}
   database = "collectd"  # store graphite data in this database
   udp_enabled = true # enable udp interface on the same port as the tcp interface
 
