@@ -1,0 +1,9 @@
+---
+fw_subnet: 192.168.0.0/16
+gandalf_port: 8000
+hipache_port: 10080
+hipache_sport: 10443
+tsuru_port: 8080
+tsuru_ssh_port: 4545
+tsuru_host: 192.168.1.18
+beanstalkd_port: 11300
